# marq

./: .gitignore  README.md  install.ps1  showcase.md  uninstall.ps1
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/src/: assoc.rs  main.rs  render.rs  watch.rs  webview2.rs
tools/: gen-icon.ps1
ui/: index.html  main.js  style.css
