[package]
name = "marq"
version = "1.0.0"
description = "Marq — Markdown, beautifully typeset"
authors = ["Harshal Vankudre"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
dunce = "1"
comrak = { version = "0.54.0", features = ["shortcodes", "syntect"] }
ammonia = "4.1.3"
syntect = "5.3.0"
notify-debouncer-mini = "0.7.0"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_Foundation"] }
windows-core = "0.61"
winreg = "0.55"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
